Fix header z-index

--- a/source/stylesheets/modules/_m-header.css.scss
+++ b/source/stylesheets/modules/_m-header.css.scss
@@ -8,6 +8,7 @@ $m : '.m-header';
   top: 0;
   left: 0;
   padding: 10px;
+  z-index: 1;
 }
 
 #{$m}__nav-toggle {
